# kancilglobaltelegrambot

./: .env  .replit  ARCHITECTURE.md  I - WW 0303.csv  README.md  app.py  bot.py  check_table  config.py  csv_importer.py  data_store.py  db.py  handlers.py  inspect_table.py  main.py  messages.py  models.py  mongo_client.py  monitoring.py  pyproject.toml  rate_limiter.py  replit.nix  retrieve.py  temp_mongo_test.py  test_mongodb.py  trade_data.csv
attached_assets/: I - WW 0302.csv  Pasted--2025-02-05-09-31-10-435-httpcore-http11-DEBUG-send-request-headers-started-request-Reque-1738747881389.txt  Pasted--LIMIT-10-2025-02-05-09-41-10-102-root-INFO-With-parameters-user-i-1738748495629.txt  Pasted--parameters-user-id-0-term-0-0901-Background-on-this-error-at-https--1738748356957.txt  Pasted-025-02-04-05-27-46-483-main-ERROR-Error-running-bot-Cannot-close-a-running-event-loop-202-1738646901288.txt  Pasted-2025-02-04-05-24-32-261-main-INFO-Flask-server-started-2025-02-04-05-24-32-261-asyncio--1738646711890.txt  Pasted-2025-02-04-12-45-06-141-httpcore-http11-DEBUG-response-closed-complete-2025-02-04-12-45-06-141-1738673154359.txt  Pasted-2025-02-04-12-51-03-291-telegram-ext-Application-DEBUG-Processing-update-Update-callback-query-1738673504767.txt  Pasted-2025-02-06-15-49-23-92-0df68ae7-User-2025-02-06-07-49-23-921-telegram-ext-Updater-ERROR-Except-1738828193340.txt  Pasted-3x-The-above-exception-was-the-direct-cause-of-the-following-exception-Traceback-most-recent-ca-1738748007840.txt  (+4 more)
data/: I - WW 0304.csv  I - WW Briquette.csv  I - WW Coconut Oil.csv
(+22 files in other folders)
