[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.1.31",
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot[job-queue]==20.7",
    "sqlalchemy>=2.0.37",
    "telegram>=0.0.1",
    "flask-wtf>=1.2.2",
    "openai>=1.61.0",
    "pymongo>=4.11",
    "xendit>=0.1.3",
    "xendit-python==4.2.0",
    "python-dateutil>=2.9.0.post0",
    "twilio>=9.4.4",
    "psutil>=6.1.1",
    "apscheduler>=3.10.1",
    "httpx>=0.24.1",
]
